# cuda-perf-lab

./: AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
benchmarks/: monte_carlo_bench.cu  reduction_bench.cu  softmax_bench.cu
docs/: monte_carlo_notes.md  nsight_analysis.md  optimization_notes.md  roofline.md  softmax_notes.md
include/common/: cli.hpp  cuda_check.hpp  device_info.hpp  stats.hpp  timer.hpp
kernels/monte_carlo/: monte_carlo_kernels.cu  monte_carlo_kernels.cuh
kernels/reduction/: reduction_kernels.cu  reduction_kernels.cuh
kernels/softmax/: softmax_kernels.cu  softmax_kernels.cuh
results/rtx_5060_ti/: README.md  monte_carlo_README.md  reduction_results.csv  reduction_results.json  softmax_README.md  softmax_results.csv  softmax_results.json
scripts/: profile_monte_carlo_ncu.sh  profile_reduction_ncu.sh  profile_softmax_ncu.sh  run_monte_carlo.sh  run_reduction.sh  run_softmax.sh  summarize_reduction_results.py
